--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -42,6 +42,10 @@ h2 {
 h3{
     font-size: 3rem;
 }
+img{
+  max-width: 100%;
+  display: block;
+}
 /* Fin configuración de estilos por etiqueta de forma global */
 
 
