--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -6,9 +6,9 @@ $fuente_principal: 'JetBrains Mono', monospace;
 $fuente_textos: 'Roboto', sans-serif;
 
 // Colores
-$verde: #4cb8b3;
-$naranja: #f57337;
-$amarillo: #fef46d;
+$verde: #0d4dc4;
+$naranja: #e4360a;
+$amarillo: #f8ea25;
 $morado: #a55ec9;
 $negro: #000000;
 $blanco: #ffffff;
