--- a/src/css/app.css
+++ b/src/css/app.css
@@ -489,12 +489,21 @@ img {
     margin-top: 90px;
     gap: 0.5rem;
   }
+  .navegacion-princiapl a {
+    color: #ffffff;
+    font-size: 1.5rem;
+    width: 160px;
+    background-color: #e4360a;
+    padding: 0.3rem;
+    border-radius: 5px;
+    text-transform: uppercase;
+  }
 }
 
 a {
   color: #ffffff;
   font-size: 2rem;
-  width: 120px;
+  width: 160px;
   background-color: #e4360a;
   padding: 0.8rem;
   border-radius: 5px;
@@ -554,6 +563,12 @@ a:hover {
   padding: 5rem 0rem;
 }
 @media (max-width: 480px) {
+  .contenido-festival {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (max-width: 768px) {
   .contenido-festival {
     display: flex;
     flex-direction: column;
