--- a/src/scss/layaout/_contenido.scss
+++ b/src/scss/layaout/_contenido.scss
@@ -6,9 +6,12 @@
     display: flex;
     flex-direction: column;
   }
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
+  @include m.tablet {
+    display: flex;
+    flex-direction: column;
+  }
+
+  @include m.grid(2) ;
   padding: 5rem 0rem;
 }
 
