--- a/src/scss/base/_mixin.scss
+++ b/src/scss/base/_mixin.scss
@@ -24,8 +24,8 @@
     }
 }
 
-@mixin grid ($columnas) {
+@mixin grid ($columnas, $gap) {
     display: grid;
     grid-template-columns: repeat($columnas, 1fr);
-    gap: 2rem;
+    gap: $gap;
 }
