--- a/src/scss/layaout/_video.scss
+++ b/src/scss/layaout/_video.scss
@@ -1,44 +1,44 @@
-@use '../base/variables' as v;
-@use '../base/mixin' as m;
+@use "../base/variables" as v;
+@use "../base/mixin" as m;
 
 .video {
-    position: relative;
-    max-height: 50rem;
-    overflow: hidden;
+  position: relative;
+  max-height: 50rem;
+  overflow: hidden;
 
-    .overlay {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-start
-    }
+  .overlay {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
 
-    video {
-        width: 100%;
-        display: block;
-    }
-}
-
-.contenido-video {
-    z-index: 1;
-    @include m.telefono {
-
+    .contenido-video {
+      z-index: 1;
+      @include m.telefono {
         display: flex;
         flex-direction: column;
         align-items: center;
-        h2{
-            font-size: 3rem;
-            text-align: center;
+        h2 {
+          font-size: 3rem;
+          text-align: center;
         }
-    }
+      }
 
-    background-color: rgba(192, 190, 190, 0.39);
-    padding: 1rem;
-    h2, p {
+      background-color: rgba(192, 190, 190, 0.39);
+      padding: 1rem;
+      h2,
+      p {
         color: v.$negro;
         text-shadow: 1px 1px v.$negro;
+      }
     }
+  }
+
+  video {
+    width: 100%;
+    display: block;
+  }
 }
