--- a/src/scss/layaout/_boletos.scss
+++ b/src/scss/layaout/_boletos.scss
@@ -15,18 +15,20 @@
   }
 
   .contenido-boletos {
-    @include m.grid(2, 3rem);
-    gap: 10rem;
+    @include m.grid(2, 2rem);
+
+    @include m.telefono {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    gap: 5rem;
   }
 
   .boleto {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    ul {
-      li {
-        padding: 1rem;
-      }
-    }
+    align-items: center;
   }
 }
