Se modifican la navegación

--- a/src/scss/layaout/_boletos.scss
+++ b/src/scss/layaout/_boletos.scss
@@ -28,7 +28,8 @@
   .boleto {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+    background-color: v.$amarillo;
   }
 }
